--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,17 @@
 dj-database-url==0.5.0
-Django==2.2.3
+Django==2.2.5
+django-bootstrap4==0.0.8
+django-model-choices==1.0.0
 django-widget-tweaks==1.4.5
+et-xmlfile==1.0.1
+jdcal==1.4.1
+mysql-connector-python==8.0.16
+mysqlclient==1.4.4
+openpyxl==2.6.2
+Pillow==6.1.0
+PyMySQL==0.9.3
 python-decouple==3.1
+pytz==2019.2
 sqlparse==0.3.0
+virtualenv==16.4.3
+virtualenvwrapper-win==1.2.5
